# real-estate-agent

./: .gitignore  README.md  crawl_article_details.py  crawl_article_list.py  extract_article_description.py  utils.py
backend/: crawl_article_list.py  extract_article_description.py  main.py  pyproject.toml  refine_article_columns.py  utils.py
backend/models/: unit_code.py
backend/repository/: mongo_database.py  real_estate_db.py  unit_code_repository.py
backend/scripts/: load_unit_codes.py
backend/service/: article_read_service.py  gu_service.py  naver_crawler_service.py
backend/utils/: crawl_utils.py  scheduler.py
backend_crawl/: crawl_article_details.py  refine_article_columns.py
front/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
front-demo/: streamlit_app.py  style.py
front-next/: package-lock.json  package.json
front-next/src/app/: globals.css  layout.tsx  page.tsx
front-next/src/app/realestate/: page.tsx
front-next/src/components/: ClientInit.tsx  Map.tsx
front/src/: App.css  App.tsx  main.tsx
front/src/mocks/: browser.ts  handlers.ts  mockData.ts
front/src/mocks/dummyData/: realestateDummyData.ts
front/src/pages/Detail/: Detail.tsx
front/src/pages/Home/: Home.tsx
front/src/pages/Search/: Search.tsx
front/src/pages/components/: SearchBar.tsx  FilterList.tsx  FilterModal.tsx  Map.tsx  SearchBar.tsx  SearchResults.tsx
front/src/store/: useFilterTag.ts
mobile/: App.tsx  package-lock.json  package.json
mobile/ios/mobile.xcodeproj/: project.pbxproj
(+3 files in other folders)
