[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.34.0"
fastapi = "^0.115.11"
requests = "^2.32.3"
pandas = "^2.2.3"
tqdm = "^4.67.1"
google-generativeai = "^0.8.4"
beautifulsoup4 = "^4.13.3"
pymongo = "^4.11.2"
schedule = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
